package Chapter17;

public interface Observer {
    public abstract void update(NumberGenerator generator);
}
